# win-sql-editor

./: Cargo.toml  app.manifest  app.rc  build.rs  readme.md
lang/: postgres
src/: main.rs
src/lexilla/: bindings.rs  constants.rs  mod.rs  sci_lexer.rs
src/scintilla/: bindings.rs  edit.rs  mod.rs
src/sql_formatter/: mod.rs
