[package]
name = "win-sql-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# winsafe = { version = "0.0.21", features = ["gui", "user"] }
native-windows-gui = "*"
native-windows-derive = "*"
winapi = "*"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "mysql",
  "sqlite",
  "uuid",
  "json",
] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
embed-resource = "2.4.3"
# bindgen = "*"

[profile.release]
strip = true
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
