[package]
name = "data-fox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# winsafe = { version = "0.0.21", features = ["gui", "user"] }
native-windows-gui = "*"
native-windows-derive = "*"
winapi = "*"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "mysql",
  "sqlite",
  "uuid",
  "json",
] }
sqlparser = "0.56.0"
lazy_static = "1.5.0"
sqlformat = "*"
taffy = "0.8.3"
anyhow = "*"

[build-dependencies]
cc = { version = "1.2.26", features = ["parallel"] }
embed-resource = "3.0.3"
# bindgen = "*"

[profile.release]
strip = true
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
